# wxl-core

./: CMakeLists.txt
scripts/: .gitignore
src/Features/DB2/: DB2Mgr.cpp
src/Features/M2/: M2.hpp  Modern.cpp
src/events/: Event.hpp
src/game/m2/: M2.hpp
src/gpu/: Capture.cpp  Capture.hpp  Present.cpp  Present.hpp  Proxy.cpp  Proxy.def
src/host/: Host.cpp  Host.hpp  main.cpp
src/offsets/: Offsets.hpp
src/offsets/engine/: Camera.hpp  Draw.hpp  Io.hpp  Mem.hpp  Sound.hpp  Ui.hpp
src/offsets/game/: ADT.hpp  DB2.hpp  GroundEffect.hpp  M2.hpp  Unit.hpp  WMO.hpp  World.hpp  WorldScene.hpp
src/runtime/: GameHooks.cpp  RenderHooks.cpp
src/runtime/storage/: StorageHook.cpp  StorageHook.hpp
